--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">y</h2>
     </div>
-    <div class="balloons text-center" id="b7">
+    <div class="balloons text-center" id="b7" >
     	<h2 style="color:#20CFB4;">✨</h2>
     </div>
 
@@ -105,18 +105,20 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>Ya halo, bất ngờ chưa bà dà</p>
-				<p>chắc bayh em hàu này vẫn đang thức đúng kk nhỉ</p>
-				<p>tớ định mừng thọ b sớm nma chưa code xong </p>
-				<p>nma vẫn sớm mà đúng kk hehee</p>
-				<p>nhanh nhỉ chưa gì m đã bằng tuổi t roi</p>
-				<p>nma sao năm nay lại ko thích đón snhat nữa zz</p>
+				<p>chắc bayh em hàu này lên giường đi khò rồi đúng kk nhỉ</p>
+				<p>t định mừng thọ sớm sớm tí nma bayh mới code xong </p>
+				<p>nma giờ này vẫn là sớm mà đúng kk hehee</p>
+				<p>nhanh nhỉ chưa gì m đã bằng tuổi t roi 😠</p>
+				<p>mà sao năm nay lại ko thích đón snhat nữa zz</p>
+				<p>bthg háo hức lắm màk</p>
 				<p>nhớn roi hay gì ạ</p>
-				<p>hnay đến tháng nên cũng hơi mệt đúng kk 😢</p>
+				<p>à hnay bé đến tháng nên cũng hơi mệt đúng kk 😢</p>
+				<p>mai dậy đọc cái này là hết đau bụng nhé</p>
 				<p>thoi thì chúc b vẫn luôn babi như này nhó</p>
-				<p>khi nào về vn thì choa đi hải phòng foodtour nhé</p>
+				<p>khi nào về vn thì choa đi hải phòng foodtour</p>
 				<p>xong dẫn đi ăn bún r iu nhé</p>
 				<p>xong cho ăn phở nhiều cà chua nữa 😁</p>
-				<p>thé thoi k chúc lữa đâuu</p>
+				<p>thé thoi k chúc lữa đâuu hết òi</p>
 				<p>lớp diu 😘</p>
 			</div>
 		</div>
