--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<p>nhớn roi hay gì ạ</p>
 				<p>à hnay bé đến tháng nên cũng hơi mệt đúng kk 😢</p>
 				<p>mai dậy đọc cái này là hết đau bụng nhé</p>
-				<p>thoi thì chúc b vẫn luôn babi như này nhó</p>
+				<p>thoi thì chúc b sang đầu 2 vẫn luôn babi như này nhó</p>
 				<p>khi nào về vn thì choa đi hải phòng foodtour</p>
 				<p>xong dẫn đi ăn bún r iu nhé</p>
 				<p>xong cho ăn phở nhiều cà chua nữa 😁</p>
